# nixcv

./: .gitignore  MAINTAINERS.md  NOTES.md  TODO.md  cv.tex  document.tex  education.tex  employment.tex  eval.nix  flake.nix  myInfo.nix  own-bib.bib  referee.tex  schema.nix  self.bib  settings.sty  skills.tex
.github/workflows/: netlify.yml
examples/: allOptions.nix  basic.nix  bibliography.nix  education.nix  experience.nix  generic.nix  objective.nix  personal.nix  skills.nix
examples/personal/: basic.nix  default.nix  order.nix  temp.nix
examples/sections/: bibliography.nix  bibresouces.nix  education.nix  experience.nix  objective.nix  personal.nix  skills.nix
latex/: cv.tex
lib/: documentation.nix  examples.nix  latex.nix  modules.nix  packaging.nix  strings.nix  test.nix  utils.nix
modules/: address.nix  cv.nix  date.nix  dateRange.nix  default.nix  education.nix  nixcv.nix  reference.nix  references.nix  section.nix  skill.nix  skills.nix  test.nix  utils.nix
modules/biblatex/: bibliography.nix  bibresources.nix  common.nix  online.nix
modules/components/: address.nix  bibresourceStringOut.nix  date.nix  dateRange.nix  format.nix  role.nix  (+15 more)
old/: cv.tex  document.tex  plaintext.txt
site/: mkdocs.yml  pyproject.toml
site/docs/: index.md
site/docs/blog/: .authors.yml
site/docs/blog/posts/: nixcv-0.1.0.md
site/docs/examples/: index.md
site/docs/stylesheets/: extra.css
templates/: simple.nix
test/: biblatex.nix  enumitem.nix  latex.nix  lists.nix  plaintext.nix  sections.nix  skills.nix  templates.nix  text.nix  titlesec.nix  top.nix
(+145 files in other folders)
