[tool.poetry]
name = "nixcv-site"
version = "0.1.0"
description = ""
authors = ["Daniel Baker <daniel.n.baker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.5"
paginate = "^0.5.6"
pillow = "^10.2.0"
cairosvg = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
